--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 
 # production
 /lib
 
+#docs
+.docz
+
 # misc
 .DS_Store
+
