--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@emotion/core": "10.1.1",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.0",
     "copyfiles": "^2.4.1",
     "css-loader": "^6.7.1",
+    "docz": "^2.3.1",
     "fork-ts-checker-webpack-plugin": "^7.2.1",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.0",
     "rimraf": "^3.0.2",
     "style-loader": "^3.3.1",
     "ts-loader": "^9.2.8",
@@ -29,6 +32,15 @@
     "build": "npm run clean && npm run build:tsc && npm run copy-files",
     "clean": "rimraf lib/",
     "build:tsc": "tsc -p ./ --declaration --outDir lib/",
-    "copy-files": "copyfiles -u 1 src/**/*.ttf src/**/*.css lib/"
+    "copy-files": "copyfiles -u 1 src/**/*.ttf src/**/*.css lib/",
+    "prepublish": "npm run build",
+    "predeploy": "npm run docz:build",
+    "deploy": "gh-pages -d .docz/dist",
+    "docz:dev": "docz dev",
+    "docz:build": "docz build",
+    "docz:serve": "docz build && docz serve"
+  },
+  "resolutions": {
+    "remark-mdx": "1.6.22"
   }
 }
